--- a/app/src/main/res/values-gl/strings.xml
+++ b/app/src/main/res/values-gl/strings.xml
@@ -7,8 +7,8 @@
     <string name="settings_language_title">Linguaxe</string>
     <string name="settings_language_summary">Cambia o idioma da aplicación</string>
     <string name="language_system_default">Sistema</string>
-    <string name="settings_translate_title">Traduce</string>
-    <string name="settings_translate_summary">Axuda a traducir o teu idioma en Weblate</string>
+    <string name="settings_translate_title">Axuda a traducir o teu idioma</string>
+    <string name="settings_translate_summary">Vai a Weblate</string>
     <string name="settings_theme">Tema</string>
     <string name="theme_light">Claro</string>
     <string name="theme_dark">Escuro</string>
