--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,8 +8,8 @@
     <string name="settings_language_title">Language</string>
     <string name="settings_language_summary">Change the app language</string>
     <string name="language_system_default">System default</string>
-    <string name="settings_translate_title">Translate</string>
-    <string name="settings_translate_summary">Help translate your language on Weblate</string>
+    <string name="settings_translate_title">Help translate your language</string>
+    <string name="settings_translate_summary">Go to Weblate</string>
     <string name="settings_theme">Theme</string>
     <string name="theme_light">Light</string>
     <string name="theme_dark">Dark</string>
