--- a/app/src/main/translations/ar.yaml
+++ b/app/src/main/translations/ar.yaml
@@ -6,8 +6,8 @@ settings_category_language_appearance: اللغة والمظهر
 settings_language_title: اللغة
 settings_language_summary: غيّر لغة التطبيق
 language_system_default: النظام
-settings_translate_title: ترجم
-settings_translate_summary: ساعد في ترجمة لغتك على Weblate
+settings_translate_title: ساعد في ترجمة لغتك
+settings_translate_summary: اذهب إلى Weblate
 settings_theme: الثيم
 theme_light: فاتح
 theme_dark: غامق
