--- a/app/src/main/translations/es.yaml
+++ b/app/src/main/translations/es.yaml
@@ -6,8 +6,8 @@ settings_category_language_appearance: Idioma y apariencia
 settings_language_title: Idioma
 settings_language_summary: Canvia el idioma de la aplicación
 language_system_default: Sistema
-settings_translate_title: Traduce
-settings_translate_summary: Ayuda a traducir tu idioma en Weblate
+settings_translate_title: Ayuda a traducir tu idioma
+settings_translate_summary: Ir a Weblate
 settings_theme: Tema
 theme_light: Claro
 theme_dark: Oscuro
