--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -63,4 +63,5 @@
     <string name="location_picker_search_location_hint">ابحث عن مدينة أو عنوان</string>
     <string name="location_picker_searching">جار البحث…</string>
     <string name="location_picker_no_results">لم يتم العثور على مواقع</string>
+    <string name="loading_new_data">جارٍ تنزيل بيانات جديدة…</string>
 </resources>
