--- a/app/src/main/translations/an.yaml
+++ b/app/src/main/translations/an.yaml
@@ -61,3 +61,4 @@ location_picker_search_icon_description: Circar
 location_picker_search_location_hint: Busca una ciudat u adreza
 location_picker_searching: Cercando…
 location_picker_no_results: No se trobó garra ubicación
+loading_new_data: Descargando datos nuevos…
