--- a/app/src/main/translations/ca.yaml
+++ b/app/src/main/translations/ca.yaml
@@ -61,3 +61,4 @@ location_picker_search_icon_description: Cerca
 location_picker_search_location_hint: Cerca una ciutat o adreça
 location_picker_searching: Cercant…
 location_picker_no_results: No s'han trobat ubicacions
+loading_new_data: S’estan baixant dades noves…
