--- a/app/src/main/translations/eu.yaml
+++ b/app/src/main/translations/eu.yaml
@@ -61,3 +61,4 @@ location_picker_search_icon_description: Bilatu
 location_picker_search_location_hint: Bilatu hiri edo helbide bat
 location_picker_searching: Bilatzen…
 location_picker_no_results: Ez da kokapenik aurkitu
+loading_new_data: Datu berriak deskargatzen…
