--- a/app/src/main/translations/gl.yaml
+++ b/app/src/main/translations/gl.yaml
@@ -61,3 +61,4 @@ location_picker_search_icon_description: Buscar
 location_picker_search_location_hint: Busca unha cidade ou enderezo
 location_picker_searching: Buscando…
 location_picker_no_results: Non se atoparon ubicacións
+loading_new_data: Descargando datos novos…
