--- a/app/src/main/res/values-gl/strings.xml
+++ b/app/src/main/res/values-gl/strings.xml
@@ -63,4 +63,5 @@
     <string name="location_picker_search_location_hint">Busca unha cidade ou enderezo</string>
     <string name="location_picker_searching">Buscando…</string>
     <string name="location_picker_no_results">Non se atoparon ubicacións</string>
+    <string name="loading_new_data">Descargando datos novos…</string>
 </resources>
