--- a/app/src/main/translations/ar.yaml
+++ b/app/src/main/translations/ar.yaml
@@ -61,4 +61,4 @@ location_picker_search_icon_description: بحث
 location_picker_search_location_hint: ابحث عن مدينة أو عنوان
 location_picker_searching: جار البحث…
 location_picker_no_results: لم يتم العثور على مواقع
-
+loading_new_data: جارٍ تنزيل بيانات جديدة…
