--- a/app/src/main/translations/es.yaml
+++ b/app/src/main/translations/es.yaml
@@ -61,3 +61,4 @@ location_picker_search_icon_description: Busca
 location_picker_search_location_hint: Busca una ciudad o dirección
 location_picker_searching: Buscando…
 location_picker_no_results: No se encontraron ubicaciones
+loading_new_data: Descargando datos nuevos…
