--- a/app/src/main/translations/en.yaml
+++ b/app/src/main/translations/en.yaml
@@ -62,3 +62,4 @@ location_picker_search_location_hint: Search city or address
 location_picker_searching: Searching…
 location_picker_no_results: No locations found
 loading_new_data: Downloading new data…
+dialog_accept: Accept
