--- a/app/src/main/translations/eu.yaml
+++ b/app/src/main/translations/eu.yaml
@@ -62,3 +62,4 @@ location_picker_search_location_hint: Bilatu hiri edo helbide bat
 location_picker_searching: Bilatzen…
 location_picker_no_results: Ez da kokapenik aurkitu
 loading_new_data: Datu berriak deskargatzen…
+dialog_accept: Onartu
