--- a/app/src/main/res/values-an/strings.xml
+++ b/app/src/main/res/values-an/strings.xml
@@ -64,4 +64,5 @@
     <string name="location_picker_searching">Cercando…</string>
     <string name="location_picker_no_results">No se trobó garra ubicación</string>
     <string name="loading_new_data">Descargando datos nuevos…</string>
+    <string name="dialog_accept">Acceptar</string>
 </resources>
