--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -64,4 +64,5 @@
     <string name="location_picker_searching">Cercant…</string>
     <string name="location_picker_no_results">No s\'han trobat ubicacions</string>
     <string name="loading_new_data">S’estan baixant dades noves…</string>
+    <string name="dialog_accept">Accepta</string>
 </resources>
