--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -64,4 +64,5 @@
     <string name="location_picker_searching">Buscando…</string>
     <string name="location_picker_no_results">No se encontraron ubicaciones</string>
     <string name="loading_new_data">Descargando datos nuevos…</string>
+    <string name="dialog_accept">Aceptar</string>
 </resources>
