--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -64,4 +64,5 @@
     <string name="location_picker_searching">Bilatzen…</string>
     <string name="location_picker_no_results">Ez da kokapenik aurkitu</string>
     <string name="loading_new_data">Datu berriak deskargatzen…</string>
+    <string name="dialog_accept">Onartu</string>
 </resources>
