--- a/app/src/main/translations/gl.yaml
+++ b/app/src/main/translations/gl.yaml
@@ -62,3 +62,4 @@ location_picker_search_location_hint: Busca unha cidade ou enderezo
 location_picker_searching: Buscando…
 location_picker_no_results: Non se atoparon ubicacións
 loading_new_data: Descargando datos novos…
+dialog_accept: Aceptar
