--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -4,6 +4,7 @@
     <string name="language_name">Español</string>
     <string name="app_name">Carburoid</string>
     <string name="menu_settings">Ajustes</string>
+    <string name="menu_chart">Gráfico</string>
     <string name="settings_category_language_appearance">Idioma y apariencia</string>
     <string name="settings_language_title">Idioma</string>
     <string name="settings_language_summary">Cambia el idioma de la aplicación</string>
