--- a/app/src/main/res/values-gl/strings.xml
+++ b/app/src/main/res/values-gl/strings.xml
@@ -3,6 +3,7 @@
     <string name="language_name">Galego</string>
     <string name="app_name">Carburoid</string>
     <string name="menu_settings">Axustes</string>
+    <string name="menu_chart">Gráfico</string>
     <string name="settings_category_language_appearance">Linguaxe e aparencia</string>
     <string name="settings_language_title">Linguaxe</string>
     <string name="settings_language_summary">Cambia o idioma da aplicación</string>
