--- a/app/src/main/translations/an.yaml
+++ b/app/src/main/translations/an.yaml
@@ -2,6 +2,7 @@ language_code: an
 language_name: Aragonés
 app_name: Carburoid
 menu_settings: Configuración
+menu_chart: Gráfico
 settings_category_language_appearance: Luenga y apariencia
 settings_language_title: Idioma
 settings_language_summary: Cambia l'idioma de l'aplicación
