--- a/app/src/main/translations/ar.yaml
+++ b/app/src/main/translations/ar.yaml
@@ -30,6 +30,13 @@ settings_filter_closed_tolerance_never: عرض دائمًا
 no_gas_stations: لم يتم العثور على محطات وقود مطابقة
 product_selector_hint: المنتج
 product_selector_icon_description: محدد المنتج
+product_category_recent: مؤخراً
+product_category_diesel: الديزل
+product_category_gasoline: البنزين
+product_category_natural_gas: الغاز الطبيعي و الغاز الحيوي
+product_category_biofuels: الوقود الحيوي
+product_category_other_gases: الغازات الأخرى
+product_category_additives: الإضافات
 location_selector_hint: الموقع
 location_selector_locate_device: حدد موقع الجهاز
 price_not_public: ✱ السعر مشروط
