--- a/app/src/main/translations/en.yaml
+++ b/app/src/main/translations/en.yaml
@@ -30,6 +30,13 @@ settings_filter_closed_tolerance_never: Show always
 no_gas_stations: No matching gas station
 product_selector_hint: Product
 product_selector_icon_description: Product selector
+product_category_recent: Recent
+product_category_diesel: Diesel
+product_category_gasoline: Gasoline
+product_category_natural_gas: Natural Gas & Biogases
+product_category_biofuels: Biofuels
+product_category_other_gases: Other Gases
+product_category_additives: Additives
 location_selector_hint: Location
 location_selector_locate_device: Locate device
 price_not_public: ✱ Conditional price
