--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -32,6 +32,13 @@
     <string name="no_gas_stations">No s\'han trobat benzineres coincidents</string>
     <string name="product_selector_hint">Producte</string>
     <string name="product_selector_icon_description">Selector de producte</string>
+    <string name="product_category_recent">Recents</string>
+    <string name="product_category_diesel">Gasolis</string>
+    <string name="product_category_gasoline">Gasolines</string>
+    <string name="product_category_natural_gas">Gasos Naturals i Biogàs</string>
+    <string name="product_category_biofuels">Biocombustibles</string>
+    <string name="product_category_other_gases">Altres Gasos</string>
+    <string name="product_category_additives">Aditius</string>
     <string name="location_selector_hint">Ubicació</string>
     <string name="location_selector_locate_device">Ubica el dispositiu</string>
     <string name="price_not_public">✱ Preu condicionat</string>
