--- a/app/src/main/translations/an.yaml
+++ b/app/src/main/translations/an.yaml
@@ -30,6 +30,13 @@ settings_filter_closed_tolerance_never: Amostrar siempre
 no_gas_stations: No s'han trobau estacions de servicio con l'actual criterio
 product_selector_hint: Producto
 product_selector_icon_description: Selector de producto
+product_category_recent: Recientes
+product_category_diesel: Gasoleos
+product_category_gasoline: Gasolinas
+product_category_natural_gas: Gasos Naturals y Biogases
+product_category_biofuels: Biocombustibles
+product_category_other_gases: Altros Gasos
+product_category_additives: Aditivos
 location_selector_hint: Ubicación
 location_selector_locate_device: Ubica o dispositivo
 price_not_public: ✱ Preu condicionau
