--- a/app/src/main/translations/es.yaml
+++ b/app/src/main/translations/es.yaml
@@ -30,6 +30,13 @@ settings_filter_closed_tolerance_never: Muestra siempre
 no_gas_stations: No se encontraron gasolineras coincidentes
 product_selector_hint: Producto
 product_selector_icon_description: Selector de producto
+product_category_recent: Recientes
+product_category_diesel: Gasoleos
+product_category_gasoline: Gasolinas
+product_category_natural_gas: Gas Naturales y Biogases
+product_category_biofuels: Biocombustibles
+product_category_other_gases: Otros Gases
+product_category_additives: Aditivos
 location_selector_hint: Ubicación
 location_selector_locate_device: Ubica el dispositivo
 price_not_public: ✱ Precio condicionado
