--- a/app/src/main/translations/ar.yaml
+++ b/app/src/main/translations/ar.yaml
@@ -37,6 +37,7 @@ product_category_natural_gas: الغاز الطبيعي و الغاز الحيو
 product_category_biofuels: الوقود الحيوي
 product_category_other_gases: الغازات الأخرى
 product_category_additives: الإضافات
+product_name_gasoleo_a: ديزل أ
 location_selector_hint: الموقع
 location_selector_locate_device: حدد موقع الجهاز
 price_not_public: ✱ السعر مشروط
