--- a/app/src/main/translations/ca.yaml
+++ b/app/src/main/translations/ca.yaml
@@ -37,6 +37,7 @@ product_category_natural_gas: Gasos Naturals i Biogàs
 product_category_biofuels: Biocombustibles
 product_category_other_gases: Altres Gasos
 product_category_additives: Aditius
+product_name_gasoleo_a: Gasoli A
 location_selector_hint: Ubicació
 location_selector_locate_device: Ubica el dispositiu
 price_not_public: ✱ Preu condicionat
