--- a/app/src/main/translations/en.yaml
+++ b/app/src/main/translations/en.yaml
@@ -37,6 +37,7 @@ product_category_natural_gas: Natural Gas & Biogases
 product_category_biofuels: Biofuels
 product_category_other_gases: Other Gases
 product_category_additives: Additives
+product_name_gasoleo_a: Diesel A
 location_selector_hint: Location
 location_selector_locate_device: Locate device
 price_not_public: ✱ Conditional price
