--- a/app/src/main/translations/eu.yaml
+++ b/app/src/main/translations/eu.yaml
@@ -37,6 +37,7 @@ product_category_natural_gas: Gas Natural eta Biogasak
 product_category_biofuels: Biokargagarriek
 product_category_other_gases: Beste Gasak
 product_category_additives: Gehigarriak
+product_name_gasoleo_a: Gasolioa A
 location_selector_hint: Kokalekua
 location_selector_locate_device: Kokatu gailua
 price_not_public: ✱ Prezio baldintzatua
