--- a/app/src/main/translations/gl.yaml
+++ b/app/src/main/translations/gl.yaml
@@ -37,6 +37,7 @@ product_category_natural_gas: Gas Natural e Biogás
 product_category_biofuels: Biocombustibles
 product_category_other_gases: Outros Gases
 product_category_additives: Aditivos
+product_name_gasoleo_a: Gasóleo A
 location_selector_hint: Localización
 location_selector_locate_device: Localiza o dispositivo
 price_not_public: ✱ Prezo condicionado
