--- a/app/src/main/translations/an.yaml
+++ b/app/src/main/translations/an.yaml
@@ -37,6 +37,7 @@ product_category_natural_gas: Gasos Naturals y Biogases
 product_category_biofuels: Biocombustibles
 product_category_other_gases: Altros Gasos
 product_category_additives: Aditivos
+product_name_gasoleo_a: Gasoléo A
 location_selector_hint: Ubicación
 location_selector_locate_device: Ubica o dispositivo
 price_not_public: ✱ Preu condicionau
