--- a/app/src/main/translations/es.yaml
+++ b/app/src/main/translations/es.yaml
@@ -37,6 +37,7 @@ product_category_natural_gas: Gas Naturales y Biogases
 product_category_biofuels: Biocombustibles
 product_category_other_gases: Otros Gases
 product_category_additives: Aditivos
+product_name_gasoleo_a: Gasóleo A
 location_selector_hint: Ubicación
 location_selector_locate_device: Ubica el dispositivo
 price_not_public: ✱ Precio condicionado
